--- a/index.html
+++ b/index.html
@@ -2,21 +2,33 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>THB calculator</title>
+    <title>Pyramid Scheme</title>
     <link rel="stylesheet" href="https://unpkg.com/98.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="pyramidStyle.css">
   </head>
   <body style="background-color: rgb(223, 223, 223); display: flex; flex-direction: column; align-items: center;">
 
-    <div class="container">
-      <h1>THB Calculator</h1>
-      <label for="commission">Enter commission amount:</label>
-      <input type="number" id="commission" name="commission">
-      <button id="calculate-btn">Calculate THB</button>
-      <div id="result"></div>
+    <div class="window" style="width: 320px">
+      <div class="title-bar">
+        <div class="title-bar-text">Commission calculator</div>
+      </div>
+      <div class="window-body">
+    
+        <div class="container">
+          <label for="THB">Enter THB amount you (plus your downlines) make:</label>
+          <input type="number" id="THB" name="THB">
+          <button id="calculate-btn">Calculate Commission</button>
+          <div id="result"></div>
+        </div>
+      </div>
+      <div class="status-bar">
+        <p class="status-bar-field">This is not a scam!</p>
+        <p class="status-bar-field">they said...</p>
+        <p class="status-bar-field">hmmm 🤨</p>
+      </div>
     </div>
 
 
-    <script src="script.js"></script>
+    <script src="pyramidScript.js"></script>
   </body>
 </html>
