--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Pyramid Scheme</title>
     <link rel="stylesheet" href="https://unpkg.com/98.css">
-    <link rel="stylesheet" href="pyramidStyle.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body style="background-color: rgb(223, 223, 223); display: flex; flex-direction: column; align-items: center;">
 
@@ -29,6 +29,6 @@
     </div>
 
 
-    <script src="pyramidScript.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
